# rtow

./: .gitignore  CMakeLists.txt  Makefile  README.md  circle_test.cpp  color.hpp  color_test.cpp  main.cpp  ray_test.cpp  test_utilities.hpp  vector3_test.cpp
include/rtow/: circle.hpp  color.hpp  hittable.hpp  ray.hpp  vector3.hpp
src/: main.cpp
tests/: circle_test.cpp  color_test.cpp  ray_test.cpp  test_utilities.hpp  vector3_test.cpp
